# codeforces

./: B_Lord_of_the_Values.cpp
.cph/: .B_Lord_of_the_Values.cpp_c4a9a7013684b40ed72f91f332796b2b.prob
cp/: A_321_like_Checker.cpp  A_Addition.cpp  A_Alyona_and_Numbers.cpp  A_AvtoBus.cpp  A_Bachgold_Problem.cpp  A_Design_Tutorial_Learn_from_Math.cpp  A_First_ABC_2.cpp  A_Gregor_and_Cryptography.cpp  A_How_Much_Does_Daytona_Cost.cpp  A_Increasing_Sequence.cpp  A_Insert_Digit.cpp  A_Jellyfish_and_Undertale.cpp  A_LCM_Problem.cpp  A_Large_Digits.cpp  A_Leyland_Number.cpp  A_MEXanized_Array.cpp  A_Noldbach_problem.cpp  A_Odd_Divisor.cpp  A_Odd_vs_Even.cpp  A_PolandBall_and_Hypothesis.cpp  A_Prime_Subtraction.cpp  A_Rigged.cpp  A_Unique_Paths.cpp  A_k_Factorization.cpp  B_Aleksa_and_Stack.cpp  B_Count_Balls.cpp  B_Cutoff.cpp  B_Different_Divisors.cpp  B_Fibonaccharsis.cpp  B_Friendly_Arrays.cpp  B_GCD_Problem.cpp  B_Jellyfish_and_Game.cpp  B_K_th_Common_Divisor.cpp  B_Longest_Palindrome.cpp  B_Nirvana.cpp  B_Permutation_Swap.cpp  B_Pleasant_Pairs.cpp  B_Prefix_and_Suffix.cpp  B_Ten_Words_of_Wisdom.cpp  B_The_Eternal_Immortality.cpp  (+31 more)
cp/.cph/: .A_Alyona_and_Numbers.cpp_32f9c3f23843ef6abeeb866f9ea2af30.prob  .dsa.c_282a2134cd474dcd4fc2b7844c966866.prob
dsa/: lcs.cpp
dsa/dp/: 01knapsack.cpp  3-d DP_Ninja and his friends.cpp  Partition Equal Subset Sum.cpp  Partitions With Given Difference.cpp  coin_change.cpp  coin_change_2.cpp  maximum_falling_path_sum.cpp  min_partition_diff.cpp  subset_sum_equal_k.cpp  target_sum.cpp  unbounded_knapsack.cpp
