cmake_minimum_required(VERSION 3.26)
project(cp)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(cp
        a.cpp
        A_321_like_Checker.cpp
        A_Addition.cpp
        A_Alyona_and_Numbers.cpp
        A_AvtoBus.cpp
        A_Bachgold_Problem.cpp
        A_Design_Tutorial_Learn_from_Math.cpp
        A_First_ABC_2.cpp
        A_Gregor_and_Cryptography.cpp
        A_How_Much_Does_Daytona_Cost.cpp
        A_Increasing_Sequence.cpp
        A_Insert_Digit.cpp
        A_Jellyfish_and_Undertale.cpp
        A_k_Factorization.cpp
        A_Large_Digits.cpp
        A_LCM_Problem.cpp
        A_Leyland_Number.cpp
        A_MEXanized_Array.cpp
        A_Noldbach_problem.cpp
        A_Odd_Divisor.cpp
        A_Odd_vs_Even.cpp
        A_PolandBall_and_Hypothesis.cpp
        A_Prime_Subtraction.cpp
        A_Rigged.cpp
        b.cpp
        B_Aleksa_and_Stack.cpp
        B_Chips_on_the_Board.cpp
        B_Count_Balls.cpp
        B_Cutoff.cpp
        B_Different_Divisors.cpp
        B_Fibonaccharsis.cpp
        B_Friendly_Arrays.cpp
        B_GCD_Problem.cpp
        B_Jellyfish_and_Game.cpp
        B_K_th_Common_Divisor.cpp
        B_Longest_Palindrome.cpp
        B_Nirvana.cpp
        B_Permutation_Swap.cpp
        B_Pleasant_Pairs.cpp
        B_Prefix_and_Suffix.cpp
        B_Sets_and_Union.cpp
        B_Ten_Words_of_Wisdom.cpp
        B_The_Eternal_Immortality.cpp
        B_Vika_and_the_Bridge.cpp
        C_Another_Permutation_Problem.cpp
        C_Assembly_via_Minimums.cpp
        C_Delete_Two_Elements.cpp
        C_Fair_Candy_Distribution.cpp
        C_Jellyfish_and_Green_Apple.cpp
        C_Max_Even.cpp
        C_Next_Prime.cpp
        C_Sum_of_gcd_of_Tuples_Easy.cpp
        C_Swappable.cpp
        C_Target_Practice.cpp
        C_Vasilije_in_Cacak.cpp
        Chef_Diet.cpp
        clion.cpp
        cpeditora.cpp
        D_1_D_Eraser.cpp
        D_Rudolph_and_Christmas_Tree.cpp
        D_Zero_Quantity_Maximization.cpp
        dsa.c
        E_Building_an_Aquarium.cpp
        F_Money_Trees.cpp
        Lockpicking_Chef.cpp
        new.cpp
        Selling_Insurance.cpp
        temp.cpp
        Work_Smarter_Not_Harder.cpp
        X_The_maximum_path_sum.cpp
        temp1.cpp
        temp1.cpp)
